# gui

./: .gitignore  .gitmodules  README.md  aws_setup.sh  docker.sh  download_paraview.sh  generate.py  launch.sh  moose_test.py  proxy.py  requirements.txt  router.py  run.py  sock.py  theia_hack.py
aparaview/: __init__.py
app/: __init__.py
app/base/: __init__.py  registration.py
app/base/blueprints/: __init__.py
app/base/blueprints/browser/: __init__.py
app/base/blueprints/directives/: __init__.py
app/base/blueprints/files/: __init__.py
app/base/blueprints/help/: __init__.py
app/base/blueprints/inputfiles/: __init__.py
app/base/blueprints/plugins/: __init__.py
app/base/blueprints/tempfiles/: __init__.py
app/base/blueprints/xterm/: __init__.py
app/base/templates/: browse.html  glvis_full.html  glvis_render.html  ide.html  index.html  login.html  noconfig.html  page-403.html  page-404.html  page-500.html  page-custom.html  para.html  pvindex1.html  terminal_.html
app/base/templates/csv/: plot.html  raw.html  table.html  template.html
app/base/templates/includes/: home_custom.html  intro.html  modals.html  navigation.html  scripts.html  sidebar.html  stylesheets.html  term.html
app/base/templates/issues/: local.html  newissue.html
app/base/templates/layouts/: base.html  base2.html  base_no_sidebar.html  basic.html
app/base/templates/psip/: selfaccess.html
app/base/utils/: mongo.py  utils.py
app/extensions/: __init__.py
app/extensions/moose/: __init__.py  moose.py
app/models/: VnV.py  VnVConnection.py  VnVFile.py  VnVFileWrapper.py  VnVInputFile.py  colors.py  json_heal.py  netcdf.py  readers.py  vnv_hdf5.py
app/moose/: __init__.py
app/moose/pyhit/: __init__.py  pyhit.py
app/moose/pyhit/hitsrc/: hit
app/rendering/: __init__.py  readers.py
app/rendering/vnvdatavis/directives/: __init__.py  apex.py  basic.py  charts.py  chartsjs.py  code.py  dataclass.py  fakejmes.py  forr.py  gauge.py  iff.py  include.py  issues.py  jmes.py  jmes_forr.py  math.py  psip.py  (+3 more)
app/sockets/namepsaces/: term.py
app/static/glvis/: glvis.css
demos/: plotly_demo
docker/: Dockerfile  launch.sh  paraview.sh  run.sh  serve.sh  theia.package.json
glvis/: glvis.py
moose/: ex01.i  run.py
moose/pyhit/: __init__.py
moose/pyhit/hitsrc/: hit
paraview/: __init__.py
python_api/: CMakeLists.txt  IOutputReader.i
python_api/reader/: CMakeLists.txt  main.cpp
python_api/reader/include/: INodes.h  IReader.h  PythonInterface.h
python_api/reader/src/: CMakeLists.txt  INodes.cpp  PythonInterface.cpp  ReaderImpl.cpp
router/: run.py
router/templates/: glvis.html
scripts/: aws_setup.sh  download_paraview.sh
template/templates/example/: link1.html
theia/: __init__.py  package.json
theia/browser-app/: package.json
theia/file-load/: package.json
(+114 files in other folders)
